# orbit-game

./: .gitmodules  CMakeLists.txt  main.cpp
data/: flight-data.h5
res/shaders/: fragment.glsl  vertex.glsl
src/: Def.hpp  FlightData.cpp  FlightData.hpp  MainContext.cpp  MainContext.hpp  Math.hpp  MeshBuilder.hpp  Primitives.cpp  Primitives.hpp
src/Graphics/: Buffer.cpp  Buffer.hpp  Draw.cpp  Draw.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Math/: Angle.cpp  Angle.hpp  Matrix.hpp  Vector.hpp
